[tool.poetry]
name = "free-youtube-downloader"
version = "0.1.0"
description = ""
authors = ["mike <xcellentbird@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
pytube = "^15.0.0"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
